# steam-idler-python

./: .coveragerc  .env.example  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  COMMIT_NOTES.md  DEPLOY_INSTRUCTIONS.md  LICENSE  MIGRATION.md  README.md  RELEASING.md  SECURITY.md  TODO.md  config_example.py  idle_bot.py  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run-gui.sh  run-web.sh  run.sh
.githooks/: pre-commit
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  deploy-sftp.yml  release.yml  static.yml
docs/: 404.md  CNAME  README.md  USAGE.md  _config.yml  idle-test-2026-06-23.md  index.md
docs/_includes/: footer.html  head.html  nav.html
docs/_layouts/: default.html  home.html
docs/assets/css/: style.css
docs/en/: README.md  SECURITY.md  USAGE.md
docs/pt-br/: README.md  SECURITY.md  USAGE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AuthDialog.tsx  StatCard.tsx
frontend/src/views/: Dashboard.tsx  LogsView.tsx  ReportView.tsx  SettingsView.tsx
scripts/: ftp_debug.py  list_games.py
src/steam_idle_bot/: __init__.py  gui.py  main.py
src/steam_idle_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/steam_idle_bot/config/: __init__.py  settings.py
src/steam_idle_bot/steam/: __init__.py  badges.py  browser_cookies.py  card_drops.py  client.py  games.py  inventory.py  protocol.py  steam_utility.py  trading_cards.py
src/steam_idle_bot/utils/: __init__.py  detailed_logger.py  exceptions.py  idle_tracker.py  logger.py  preflight.py  redaction.py
src/steam_idle_bot/webapi/: __init__.py  controller.py  server.py
steam_idle_bot/steam/: games.py
tests/: conftest.py  test_idle_bot.py
tests/unit/: test_badges.py  test_badges_extra.py  test_browser_cookies.py  test_browser_cookies_extra.py  test_card_drops.py  test_card_drops_cache.py  test_card_drops_extra.py  test_client.py  test_detailed_logger.py  test_efficiency_caches.py  test_games.py  test_games_extra.py  test_gui.py  test_gui_parity.py  test_idle_tracker.py  test_inventory.py  test_main_cli.py  test_main_extra.py  test_preflight.py  test_redaction.py  test_settings.py  test_settings_extra.py  test_signal_integration.py  test_steam_idle_bot.py  test_steam_utility.py  test_steam_utility_extra.py  test_trading_cards.py  test_trading_cards_cache.py  test_trading_cards_extra.py  test_webapi.py
