[project]
name = "steam-idle-bot"
version = "0.1.0"
description = "Steam Idle Bot with Trading Card Support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # steam[client] pulls gevent, gevent-eventemitter and protobuf~=3.0.
    # protobuf MUST stay <4: the steam library ships protoc-generated _pb2
    # modules that break on protobuf 4+ ("Descriptors cannot be created directly").
    # NOTE: do NOT add the standalone `eventemitter` package. steam.client does
    # `from eventemitter import EventEmitter`, and `steam[client]` already pulls
    # `gevent-eventemitter`, which ships a self-contained gevent-based EventEmitter.
    # Installing standalone `eventemitter` overwrites that module with an
    # incompatible one (`'SteamClient' object has no attribute '_listeners'`).
    "steam[client]>=1.4.4,<1.5.0",
    # protobuf is pinned <4 by steam[client]==1.4.4 itself (it declares
    # protobuf>=3.0,<4), so Dependabot advisories GHSA-8qvm-5x2c-j2w7 and
    # GHSA-7gcm-g887-7qv7 (patched only in protobuf 4.25.8 / 5.29.6) are not
    # actionable here and are dismissed as tolerable_risk: the bot only
    # deserializes protobuf/JSON from authenticated Steam servers over TLS, so
    # the DoS vectors require untrusted input that never reaches it.
    "protobuf>=3.20,<4",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "requests>=2.34",
    "rich>=15",
    "urllib3>=2.7",
    # Recover community Steam cookies from a logged-in browser when configured
    # cookies are store-only/expired. Import is guarded so its absence is
    # non-fatal (e.g. headless CI without a browser/keyring).
    "browser-cookie3>=0.20",
]

[dependency-groups]
dev = [
    "mypy>=2.1",
    "pytest>=9.1",
    "pytest-cov>=7.1",
    "ruff>=0.15.18",
    "types-requests>=2.33",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
disallow_untyped_defs = false
ignore_missing_imports = true
